# sqlx-simple-migrator

./: Cargo.toml  README.md
src/: lib.rs  migration_0_initial.rs
