[package]
name = "sqlx-simple-migrator"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1"

[dependencies.sqlx]
version = "0.3"
default-features = false
features = [ "runtime-tokio", "macros" , "postgres", "uuid", "chrono",  "tls" ]