[package]
name = "sqlx-simple-migrator"
version = "0.0.3"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A very simple migration framework for sqlx and postgres"
readme = "./README.md"
license = "MIT"
keywords = ["migration", "sqlx", "postgres"]
categories = ["database"]
repository = "https://github.com/khonsulabs/sqlx-simple-migrator"

[dependencies]
thiserror = "1"
sqlx = { version = "0.4", default-features = false, features = [
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono"
] }
